--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,8 @@ description = "A GitHub automation toolkit powered by machine learning."
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = []
+
+[tool.uv.workspace]
+members = [
+    "tools",
+]
