dockerize tool: doc_generator

--- a/tools/doc_generator/Dockerfile
+++ b/tools/doc_generator/Dockerfile
@@ -1,22 +1,40 @@
+# Multi-stage build for better optimization
 FROM python:3.10-slim-buster AS builder
+
+# Install uv by copying from the official image
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+
+# Set working directory
 WORKDIR /app
 
-RUN curl -LsSf https://astral.sh/uv/install.sh | sh
-ENV PATH="/root/.cargo/bin:$PATH"
+# Copy dependency files first (for better caching)
+COPY pyproject.toml uv.lock ./
 
-COPY pyproject.toml uv.lock src ./
+# Install dependencies only (not the project itself yet)
+RUN uv sync --locked --no-install-project
+
+# Copy the rest of the application
+COPY src ./src
 COPY .env .env
 
-RUN uv pip install --all-features --requirement pyproject.toml
+# Install the project itself
+RUN uv sync --locked
 
+# Final stage
 FROM python:3.10-slim-buster
+
+# Copy the virtual environment from builder
+COPY --from=builder /app/.venv /app/.venv
+
+# Copy application files
+COPY --from=builder /app/src /app/src
+COPY --from=builder /app/.env /app/.env
+
+# Set working directory
 WORKDIR /app
 
-COPY --from=builder /root/.cargo/bin/uv /usr/local/bin/uv
-COPY --from=builder /app/.venv /app/.venv
-COPY pyproject.toml uv.lock src ./
-COPY .env .env
-
+# Make sure the virtual environment is used
 ENV PATH="/app/.venv/bin:$PATH"
 
-CMD ["uv", "run", "-m", "src.main"]
+# Run the application
+CMD ["python", "-m", "src.main"]
