--- a/tools/doc_generator/docker-compose.yml
+++ b/tools/doc_generator/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   doc_generator:
     build: .
     restart: always
+    user: "${UID:-1000}:${GID:-1000}"
     volumes:
       - ./src/temp:/app/src/temp
     environment:
