fix: docker exits once the job is done

--- a/tools/doc_generator/docker-compose.yml
+++ b/tools/doc_generator/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   doc_generator:
     build: .
-    restart: always
+    restart: on-failure
     volumes:
       - ./src/temp:/app/src/temp
     environment:
